lib/src/system_informer/generated_bindings.dart


  external PVOID Parameter1;

  external PVOID Parameter2;

  @ULONG()
  external int SubId;

  external PVOID Context;
}

typedef PH_PLUGIN_TREENEW_MESSAGE$1 = PH_PLUGIN_TREENEW_MESSAGE;
typedef PPH_PLUGIN_TREENEW_MESSAGE = ffi.Pointer<PH_PLUGIN_TREENEW_MESSAGE>;
typedef PPH_PLUGIN_TREENEW_SORT_FUNCTIONFunction = LONG Function(PVOID Node1,
    PVOID Node2, ULONG SubId, ffi.UnsignedInt SortOrder, PVOID Context);
typedef DartPPH_PLUGIN_TREENEW_SORT_FUNCTIONFunction = DartLONG Function(
    PVOID Node1,
    PVOID Node2,
    DartDWORD SubId,
    PH_SORT_ORDER SortOrder,
    PVOID Context);
typedef PPH_PLUGIN_TREENEW_SORT_FUNCTION
    = ffi.Pointer<ffi.NativeFunction<PPH_PLUGIN_TREENEW_SORT_FUNCTIONFunction>>;

final class PH_RELATIVE_BYTESREF extends ffi.Struct {
  @ULONG()
  external int Length;

  @ULONG()
  external int Offset;
}

typedef PPH_RELATIVE_STRINGREF = ffi.Pointer<PH_RELATIVE_BYTESREF>;
typedef PPHSVC_SERVER_PROBE_BUFFERFunction = NTSTATUS Function(
    PPH_RELATIVE_STRINGREF String,
    ULONG Alignment,
    BOOLEAN AllowNull,
    ffi.Pointer<PVOID> Pointer);
typedef DartPPHSVC_SERVER_PROBE_BUFFERFunction = DartLONG Function(
    PPH_RELATIVE_STRINGREF String,
    DartDWORD Alignment,
    Dartboolean AllowNull,
    ffi.Pointer<PVOID> Pointer);
typedef PPHSVC_SERVER_PROBE_BUFFER
    = ffi.Pointer<ffi.NativeFunction<PPHSVC_SERVER_PROBE_BUFFERFunction>>;
typedef PPHSVC_SERVER_CAPTURE_BUFFERFunction = NTSTATUS Function(
    PPH_RELATIVE_STRINGREF String,
    BOOLEAN AllowNull,
    ffi.Pointer<PVOID> CapturedBuffer);
typedef DartPPHSVC_SERVER_CAPTURE_BUFFERFunction = DartLONG Function(
    PPH_RELATIVE_STRINGREF String,
    Dartboolean AllowNull,
    ffi.Pointer<PVOID> CapturedBuffer);
typedef PPHSVC_SERVER_CAPTURE_BUFFER
    = ffi.Pointer<ffi.NativeFunction<PPHSVC_SERVER_CAPTURE_BUFFERFunction>>;
typedef PPHSVC_SERVER_CAPTURE_STRINGFunction = NTSTATUS Function(
    PPH_RELATIVE_STRINGREF String,
    BOOLEAN AllowNull,
    ffi.Pointer<PPH_STRING> CapturedString);
typedef DartPPHSVC_SERVER_CAPTURE_STRINGFunction = DartLONG Function(
    PPH_RELATIVE_STRINGREF String,
    Dartboolean AllowNull,
    ffi.Pointer<PPH_STRING> CapturedString);
typedef PPHSVC_SERVER_CAPTURE_STRING
    = ffi.Pointer<ffi.NativeFunction<PPHSVC_SERVER_CAPTURE_STRINGFunction>>;

final class PH_PLUGIN_PHSVC_REQUEST extends ffi.Struct {
  @ULONG()
  external int SubId;

  @NTSTATUS()
  external int ReturnStatus;

  external PVOID InBuffer;

  @ULONG()
  external int InLength;

  external PVOID OutBuffer;

  @ULONG()
  external int OutLength;

  external PPHSVC_SERVER_PROBE_BUFFER ProbeBuffer;

  external PPHSVC_SERVER_CAPTURE_BUFFER CaptureBuffer;

  external PPHSVC_SERVER_CAPTURE_STRING CaptureString;
}

typedef PH_PLUGIN_PHSVC_REQUEST$1 = PH_PLUGIN_PHSVC_REQUEST;
typedef PPH_PLUGIN_PHSVC_REQUEST = ffi.Pointer<PH_PLUGIN_PHSVC_REQUEST>;
typedef PPHSVC_CLIENT_FREE_HEAPFunction = ffi.Void Function(PVOID Memory);
typedef DartPPHSVC_CLIENT_FREE_HEAPFunction = void Function(PVOID Memory);
typedef PPHSVC_CLIENT_FREE_HEAP
    = ffi.Pointer<ffi.NativeFunction<PPHSVC_CLIENT_FREE_HEAPFunction>>;
typedef PPHSVC_CLIENT_CREATE_STRINGFunction = PVOID Function(
    PVOID String, SIZE_T Length, PPH_RELATIVE_STRINGREF StringRef);
typedef DartPPHSVC_CLIENT_CREATE_STRINGFunction = PVOID Function(
    PVOID String, DartULONG_PTR Length, PPH_RELATIVE_STRINGREF StringRef);
typedef PPHSVC_CLIENT_CREATE_STRING
    = ffi.Pointer<ffi.NativeFunction<PPHSVC_CLIENT_CREATE_STRINGFunction>>;

final class PH_PLUGIN_PHSVC_CLIENT extends ffi.Struct {
  external HANDLE ServerProcessId;

  external PPHSVC_CLIENT_FREE_HEAP FreeHeap;

  external PPHSVC_CLIENT_CREATE_STRING CreateString;
}

typedef PH_PLUGIN_PHSVC_CLIENT$1 = PH_PLUGIN_PHSVC_CLIENT;
typedef PPH_PLUGIN_PHSVC_CLIENT = ffi.Pointer<PH_PLUGIN_PHSVC_CLIENT>;

/// Plugin structures
final class PH_PLUGIN_INFORMATION extends ffi.Struct {
  external PWSTR DisplayName;

  external PWSTR Author;

  external PWSTR Description;

  external PWSTR Url;

  @BOOLEAN()
  external int HasOptions;

  @ffi.Array.multi([3])
  external ffi.Array<BOOLEAN> Reserved1;

  external PVOID Interface;
}

/// Plugin structures
typedef PH_PLUGIN_INFORMATION$1 = PH_PLUGIN_INFORMATION;
typedef PPH_PLUGIN_INFORMATION = ffi.Pointer<PH_PLUGIN_INFORMATION>;
typedef PPH_PLUGIN_MENU_ITEM = ffi.Pointer<PH_PLUGIN_MENU_ITEM>;
typedef PH_PLUGIN_MENU_ITEM_DELETE_FUNCTION
    = ffi.NativeFunction<ffi.Void Function(PPH_PLUGIN_MENU_ITEM MenuItem)>;
typedef PPH_PLUGIN_MENU_ITEM_DELETE_FUNCTION
    = ffi.Pointer<PH_PLUGIN_MENU_ITEM_DELETE_FUNCTION>;

final class PH_PLUGIN_MENU_ITEM extends ffi.Struct {
  external PPH_PLUGIN Plugin;

  @ULONG()
  external int Id;

  @ULONG()
  external int Reserved1;

  external PVOID Context;

  /// valid only when the menu item is chosen
  external HWND OwnerWindow;

  external PVOID Reserved2;

  external PVOID Reserved3;

  /// valid only for EMENU-based menu items
  external PPH_PLUGIN_MENU_ITEM_DELETE_FUNCTION DeleteFunction;
}

typedef PH_PLUGIN_MENU_ITEM$1 = PH_PLUGIN_MENU_ITEM;

final class SYSTEM_PERFORMANCE_INFORMATION extends ffi.Struct {
  external LARGE_INTEGER$1 IdleProcessTime;

  external LARGE_INTEGER$1 IoReadTransferCount;

  external LARGE_INTEGER$1 IoWriteTransferCount;

  external LARGE_INTEGER$1 IoOtherTransferCount;

  @ULONG()
  external int IoReadOperationCount;

  @ULONG()
  external int IoWriteOperationCount;

  @ULONG()
  external int IoOtherOperationCount;

  @ULONG()
  external int AvailablePages;

  @ULONG()
  external int CommittedPages;

  @ULONG()
  external int CommitLimit;

  @ULONG()
  external int PeakCommitment;

  @ULONG()
  external int PageFaultCount;

  @ULONG()
  external int CopyOnWriteCount;

  @ULONG()
  external int TransitionCount;

  @ULONG()
  external int CacheTransitionCount;

  @ULONG()
  external int DemandZeroCount;

  @ULONG()
  external int PageReadCount;

  @ULONG()
  external int PageReadIoCount;

  @ULONG()
  external int CacheReadCount;

  @ULONG()
  external int CacheIoCount;

  @ULONG()
  external int DirtyPagesWriteCount;

  @ULONG()
  external int DirtyWriteIoCount;

  @ULONG()
  external int MappedPagesWriteCount;

  @ULONG()
  external int MappedWriteIoCount;

  @ULONG()
  external int PagedPoolPages;

  @ULONG()
  external int NonPagedPoolPages;

  @ULONG()
  external int PagedPoolAllocs;

  @ULONG()
  external int PagedPoolFrees;

  @ULONG()
  external int NonPagedPoolAllocs;

  @ULONG()
  external int NonPagedPoolFrees;

  @ULONG()
  external int FreeSystemPtes;

  @ULONG()
  external int ResidentSystemCodePage;

  @ULONG()
  external int TotalSystemDriverPages;

  @ULONG()
  external int TotalSystemCodePages;

  @ULONG()
  external int NonPagedPoolLookasideHits;

  @ULONG()
  external int PagedPoolLookasideHits;

  @ULONG()
  external int AvailablePagedPoolPages;

  @ULONG()
  external int ResidentSystemCachePage;

  @ULONG()
  external int ResidentPagedPoolPage;

  @ULONG()
  external int ResidentSystemDriverPage;

  @ULONG()
  external int CcFastReadNoWait;

  @ULONG()
  external int CcFastReadWait;

  @ULONG()
  external int CcFastReadResourceMiss;

  @ULONG()
  external int CcFastReadNotPossible;

  @ULONG()
  external int CcFastMdlReadNoWait;

  @ULONG()
  external int CcFastMdlReadWait;

  @ULONG()
  external int CcFastMdlReadResourceMiss;

  @ULONG()
  external int CcFastMdlReadNotPossible;

  @ULONG()
  external int CcMapDataNoWait;

  @ULONG()
  external int CcMapDataWait;

  @ULONG()
  external int CcMapDataNoWaitMiss;

  @ULONG()
  external int CcMapDataWaitMiss;

  @ULONG()
  external int CcPinMappedDataCount;

  @ULONG()
  external int CcPinReadNoWait;

  @ULONG()
  external int CcPinReadWait;

  @ULONG()
  external int CcPinReadNoWaitMiss;

  @ULONG()
  external int CcPinReadWaitMiss;

  @ULONG()
  external int CcCopyReadNoWait;

  @ULONG()
  external int CcCopyReadWait;

  @ULONG()
  external int CcCopyReadNoWaitMiss;

  @ULONG()
  external int CcCopyReadWaitMiss;

  @ULONG()
  external int CcMdlReadNoWait;

  @ULONG()
  external int CcMdlReadWait;

  @ULONG()
  external int CcMdlReadNoWaitMiss;

  @ULONG()
  external int CcMdlReadWaitMiss;

  @ULONG()
  external int CcReadAheadIos;

  @ULONG()
  external int CcLazyWriteIos;

  @ULONG()
  external int CcLazyWritePages;

  @ULONG()
  external int CcDataFlushes;

  @ULONG()
  external int CcDataPages;

  @ULONG()
  external int ContextSwitches;

  @ULONG()
  external int FirstLevelTbFills;

  @ULONG()
  external int SecondLevelTbFills;

  @ULONG()
  external int SystemCalls;

  @ULONGLONG()
  external int CcTotalDirtyPages;

  @ULONGLONG()
  external int CcDirtyPageThreshold;

  @LONGLONG()
  external int ResidentAvailablePages;

  @ULONGLONG()
  external int SharedCommittedPages;

  @ULONGLONG()
  external int MdlPagesAllocated;

  @ULONGLONG()
  external int PfnDatabaseCommittedPages;

  @ULONGLONG()
  external int SystemPageTableCommittedPages;

  @ULONGLONG()
  external int ContiguousPagesAllocated;
}

typedef PSYSTEM_PERFORMANCE_INFORMATION
    = ffi.Pointer<SYSTEM_PERFORMANCE_INFORMATION>;

final class PH_PLUGIN_SYSTEM_STATISTICS extends ffi.Struct {
  external PSYSTEM_PERFORMANCE_INFORMATION Performance;

  @ULONG()
  external int NumberOfProcesses;

  @ULONG()
  external int NumberOfThreads;

  @ULONG()
  external int NumberOfHandles;

  @FLOAT()
  external double CpuKernelUsage;

  @FLOAT()
  external double CpuUserUsage;

  external PH_UINT64_DELTA$1 IoReadDelta;

  external PH_UINT64_DELTA$1 IoWriteDelta;

  external PH_UINT64_DELTA$1 IoOtherDelta;

  @ULONG()
  external int CommitPages;

  @ULONG()
  external int PhysicalPages;

  external HANDLE MaxCpuProcessId;

  external HANDLE MaxIoProcessId;

  external PPH_CIRCULAR_BUFFER_FLOAT CpuKernelHistory;

  external PPH_CIRCULAR_BUFFER_FLOAT CpuUserHistory;

  external ffi.Pointer<PPH_CIRCULAR_BUFFER_FLOAT> CpusKernelHistory;

  external ffi.Pointer<PPH_CIRCULAR_BUFFER_FLOAT> CpusUserHistory;

  external PPH_CIRCULAR_BUFFER_ULONG64 IoReadHistory;

  external PPH_CIRCULAR_BUFFER_ULONG64 IoWriteHistory;

  external PPH_CIRCULAR_BUFFER_ULONG64 IoOtherHistory;

  external PPH_CIRCULAR_BUFFER_ULONG CommitHistory;

  external PPH_CIRCULAR_BUFFER_ULONG PhysicalHistory;

  /// ID of max. CPU process
  external PPH_CIRCULAR_BUFFER_ULONG MaxCpuHistory;

  /// ID of max. I/O process
  external PPH_CIRCULAR_BUFFER_ULONG MaxIoHistory;

  external PPH_CIRCULAR_BUFFER_FLOAT MaxCpuUsageHistory;

  external PPH_CIRCULAR_BUFFER_ULONG64 MaxIoReadOtherHistory;

  external PPH_CIRCULAR_BUFFER_ULONG64 MaxIoWriteHistory;
}

typedef PH_PLUGIN_SYSTEM_STATISTICS$1 = PH_PLUGIN_SYSTEM_STATISTICS;
typedef PPH_PLUGIN_SYSTEM_STATISTICS = ffi.Pointer<PH_PLUGIN_SYSTEM_STATISTICS>;
typedef PH_PLUGIN_ENUMERATE = ffi
    .NativeFunction<NTSTATUS Function(PPH_PLUGIN Information, PVOID Context)>;
typedef PPH_PLUGIN_ENUMERATE = ffi.Pointer<PH_PLUGIN_ENUMERATE>;

/// actions
enum PH_PHSVC_MODE {
  ElevatedPhSvcMode(0),
  Wow64PhSvcMode(1);

  final int value;
  const PH_PHSVC_MODE(this.value);

  static PH_PHSVC_MODE fromValue(int value) => switch (value) {
        0 => ElevatedPhSvcMode,
        1 => Wow64PhSvcMode,
        _ => throw ArgumentError('Unknown value for PH_PHSVC_MODE: $value'),
      };
}

enum PH_POWERACTION_TYPE {
  PH_POWERACTION_TYPE_NONE(0),
  PH_POWERACTION_TYPE_WIN32(1),
  PH_POWERACTION_TYPE_NATIVE(2),
  PH_POWERACTION_TYPE_CRITICAL(3),
  PH_POWERACTION_TYPE_ADVANCEDBOOT(4),
  PH_POWERACTION_TYPE_FIRMWAREBOOT(5),
  PH_POWERACTION_TYPE_UPDATE(6),
  PH_POWERACTION_TYPE_WDOSCAN(7),
  PH_POWERACTION_TYPE_MAXIMUM(8);

  final int value;
  const PH_POWERACTION_TYPE(this.value);
